[gd_scene load_steps=18 format=2]

[ext_resource path="res://asset/tile_set/4 Animated objects/Chest.png" type="Texture" id=1]
[ext_resource path="res://animated objetcs/Area2D.gd" type="Script" id=2]
[ext_resource path="res://animated objetcs/Rune.gd" type="Script" id=3]
[ext_resource path="res://asset/tile_set/4 Animated objects/Rune.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Chest",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Rune",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.2277
height = 0.277138

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 19.6983 ),
"update": 1,
"values": [ 1, 2, 3, 3 ]
}

[sub_resource type="Animation" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10.7742, 7.22183 )

[node name="Object" type="Node2D"]
position = Vector2( -0.323532, 1.29414 )

[node name="RuneChest" type="Area2D" parent="." groups=[
"Rune",
]]
position = Vector2( 92.2643, 37.3658 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="RuneChest"]
frames = SubResource( 14 )
animation = "Rune"

[node name="CollisionShape2D" type="CollisionShape2D" parent="RuneChest"]
position = Vector2( -0.142748, 0.888999 )
shape = SubResource( 2 )

[node name="Chest" type="Area2D" parent="."]
visible = false
position = Vector2( 128.938, 34.2397 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Chest"]
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="ChestAnimation" type="AnimationPlayer" parent="Chest/Sprite"]
playback_speed = 0.6
anims/Box = SubResource( 3 )
anims/Rune = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chest"]
position = Vector2( -1.77913, 8.07548 )
shape = SubResource( 5 )
[connection signal="body_entered" from="RuneChest" to="RuneChest" method="_on_Rune_body_entered"]
[connection signal="body_entered" from="Chest" to="Chest" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Chest" to="Chest" method="_on_Area2D_body_exited"]
